--- a/PY-02.md
+++ b/PY-02.md
@@ -2,7 +2,7 @@
 
 ## Typing Python code
 
-Let me assume that you are using Jupyter Qt Console, though almost everything would also be valid in other interfaces to a Python interpreter, with minor adjustments. Before starting, a reminder: Python is **case sensitive**. 
+In this tutorial of typing Python code, we assume that you are using Jupyter Qt Console. Almost everything would also be valid in other interfaces to a Python interpreter, with minor adjustments. Before starting, a reminder: Python is **case sensitive**. 
 
 The console produces input prompts (such as `In[1]:`), where you can type a command and press `Return`. Then Python returns either an output (preceded by `Out[1]:`), a (typically long and difficult) error message, or no answer at all. A simple example follows.
 
@@ -100,96 +100,127 @@ In [12]: type('Miguel')
 Out[12]: str
 ```
 
-Strings are always enclosed by quote marks, either single or double (but same way on both sides). 
+Strings are always enclosed by quote marks, either single or double (but same way on both sides). In Python, a string is a sequence of **characters**. This includes the (English) alphanumeric characters and also special characters like white space, punctuation, etc. Other symbols, like emoticons, can also appear in your data, specially in social networks data. Besides that, you can also manage letters from other languages (Spanish, Portuguese, etc) or alphabets (Cyrillic, hiragana, etc), and even ideographs (such as Han characters).
+
+There is a basic set of 128 characters, called the **ASCII characters**, which are encoded as numbers (from 0 to 127) in the same way by all the computers, so you will never have trouble with them. They include the English letters (without accents), the numbers, basic punctuation (not curly quote marks or long dashes), white space, **control characters** such as the new line, represented in many computer languages (including Python) as `\n`, and other symbols familiar to you, such as the dollar (`$`) and the hash (`#`) symbols. The complete list can be easily found in Internet.
+
+Non-ASCII characters can be encoded by different computers or different text editors in different ways. Mind that, if you capture string data on your own, you will probably find some of these characters in your data. Even when the documents are expected to be in English, they can be contaminated by other languages: Han characters, German dieresis, Spanish eñe, etc.
+
+The preferred **encoding** is **UTF-8**, used by Python. UTF-8 is the default encoding in Macintosh computers, but not in Windows computers, which use their own system, which is region specific. In US and Western Europe, this is **Windows-1252**.
+
+The UTF-8 encoding can be easily learned from the Python interpreter. For instance, for the lowercase 'a':
+
+```
+In [13]: ord('a')
+Out[13]: 97
+```
+The uppercase 'A' is 
+
+```
+In [14]: ord('A')
+Out[14]: 65
+```
+
+The Spanish 'ñ':
+
+```
+In [15]: ord('ñ')
+Out[15]: 241
+```
+
+This goes beyond 127, so it is not an ASCII character, and it may show up in different computers. Strings can be concatenated in a straightforward way:
+
+In [16]: 'Donald' + ' ' + 'Trump'
+Out[16]: 'Donald Trump'
 
 ## Type conversions
 
 The functions `int` and `float` can be used to convert numbers from one type to another type (sometimes at a loss):
 
 ```
-In [13]: float(2)
-Out[13]: 2.0
+In [17]: float(2)
+Out[17]: 2.0
 ```
 
 ```
-In [14]: int(2.3)
-Out[14]: 2
+In [18]: int(2.3)
+Out[18]: 2
 ```
 
 Sometimes, you can convert numbers to strings and conversely:
 
 ```
-In [15]: int('27')
-Out[15]: 27
+In [19]: int('27')
+Out[19]: 27
 ```
 
 ```
-In [16]: float('27')
-Out[16]: 27.0
+In [20]: float('27')
+Out[20]: 27.0
 ```
 
 ```
-In [17]: str(27)
-Out[17]: '27'
+In [21]: str(27)
+Out[21]: '27'
 ```
 
 Boolean variables can be converted to `int` and `float` type with the functions mentioned above, but also by means of a mathematical operator:
 
 ```
-In [18]: 1 + True
-Out[18]: 2
+In [22]: 1 + True
+Out[22]: 2
 ```
 
 ```
-In [19]: math.sqrt(False)
-Out[19]: 0.0
+In [23]: math.sqrt(False)
+Out[23]: 0.0
 ```
 
 ## Comparison operators
 
-Let me show how the **comparison operators** work in Python. For sure, you know the *lower than* symbol:
+Let us how the **comparison operators** work in Python. For sure, you know the *lower than* symbol:
 
 ```
-In [20]: 5 < a
-Out[20]: False
+In [24]: 5 < a
+Out[24]: False
 ```
 
 When you input an expression involving a comparison operator, Python evaluates it, returning either `True` or `False`. The following example uses the **equality operator**, which is denoted in Python by a double equal sign:
 
 ```
-In [21]: a == 4
-Out[21]: True
+In [25]: a == 4
+Out[25]: True
 ```
 
 Why two equal signs? The reason is that a single equal sign is used to assign names. So `a = 4` is interpreted, not as asking whether `a` is equal to `4`, but as creating a variable named `a` whose value is `4`. The *not equal* operator is denoted by an equal sign preceded by an admiration symbol (`!`):
 
 ```
-In [22]: a != 4
-Out[22]: False
+In [26]: a != 4
+Out[26]: False
 ```
 
 Other examples involving comparison operators:
 
 ```
-In [23]: 'a' > 'b'
-Out[23]: False
+In [27]: 'a' > 'b'
+Out[27]: False
 ```
 
 ```
-In [24]: 'A' <= 'a'
-Out[24]: True
+In [28]: 'A' <= 'a'
+Out[28]: True
 ```
 
 Numbers and booleans can be compared irrespective of their types:
 
 ```
-In [25]: 3 == 3.0
-Out[25]: True
+In [29]: 3 == 3.0
+Out[29]: True
 ````
 
 ```
-In [26]: 0.7 < True
-Out[26]: True
+In [30]: 0.7 < True
+Out[30]: True
 ```
 
 ## Logical operators
@@ -197,23 +228,29 @@ Out[26]: True
 The **logical operators** allow operations between booleans. They are `and`, `or` a `not`. They work in the same way as in other languages: (a) `x and y` is true when both `x` and `y` are true, (b) `x or y` is true when at least one of them is true, and (c) `not x` is true when `x` is false. Examples:
 
 ```
-In [27]: True and False
-Out[27]: False
+In [31]: True and False
+Out[31]: False
 ```
 
 ```
-In [28]: True or False
-Out[28]: True
+In [32]: True or False
+Out[32]: True
 ```
 
 ```
-In [29]: not True
-Out[29]: False
+In [33]: not True
+Out[33]: False
 ```
 
 Since expressions involving comparison operators are evaluated and turned into either `True` or `False`, we can combine them with logical operators. Example:
 
 ```
-In [30]: 5 < 7 and ' ' <= '6'
-Out[30]: True
+In [34]: 5 < 7 and ' ' <= '6'
+Out[34]: True
 ```
+
+## Homework
+
+1. Calculate the square root of 2 and take the square of it. Do you get 2? Why?
+
+2. Evaluate the expressions `1/3 + 1/3 + 1/3 + 1/3 == 4/3` and `1/3 + 1/3 + 1/3 + 1/3 + 1/3 == 5/3`. One is true and the other one is false. Is Python crazy?
