--- a/PY-02.md
+++ b/PY-02.md
@@ -199,28 +199,23 @@ In [26]: a != 4
 Out[26]: False
 ```
 
-Other examples involving comparison operators:
+Another example involving a comparison operator:
 
 ```
-In [27]: 'a' > 'b'
-Out[27]: False
+In [27]: 'a' >= 'A'
+Out[27]: True
 ```
 
+Why is this? Because of this inequality being true for the numbers that encode these characters, which we have learned above. Numbers and booleans can be compared irrespective of their types:
+
 ```
-In [28]: 'A' <= 'a'
+In [28]: 3 == 3.0
 Out[28]: True
-```
-
-Numbers and booleans can be compared irrespective of their types:
-
-```
-In [29]: 3 == 3.0
-Out[29]: True
 ````
 
 ```
-In [30]: 0.7 < True
-Out[30]: True
+In [29]: 0.7 < True
+Out[29]: True
 ```
 
 ## Logical operators
@@ -228,25 +223,25 @@ Out[30]: True
 The **logical operators** allow operations between booleans. They are `and`, `or` a `not`. They work in the same way as in other languages: (a) `x and y` is true when both `x` and `y` are true, (b) `x or y` is true when at least one of them is true, and (c) `not x` is true when `x` is false. Examples:
 
 ```
-In [31]: True and False
-Out[31]: False
+In [30]: True and False
+Out[30]: False
 ```
 
 ```
-In [32]: True or False
-Out[32]: True
+In [31]: True or False
+Out[31]: True
 ```
 
 ```
-In [33]: not True
-Out[33]: False
+In [32]: not True
+Out[32]: False
 ```
 
 Since expressions involving comparison operators are evaluated and turned into either `True` or `False`, we can combine them with logical operators. Example:
 
 ```
-In [34]: 5 < 7 and ' ' <= '6'
-Out[34]: True
+In [33]: 5 < 7 and ' ' <= '6'
+Out[33]: True
 ```
 
 ## Homework
